Layout improvements foor users/usergroups/bier

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -2,6 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.signup-list {
+  list-style-type: none;
+  padding-left: 8px
+}
+
+.signup-list span {
+  display: block;
+  padding-left: 8px;
+  font-style: italic;
+}
+
 .small-profile-picture {
   width: 56px;
   height: 56px;
