Add opening when there is no current_user

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -73,6 +73,8 @@
       <% else %>
         <tr class="default">
       <% end %>
+    <% else %>
+      <tr class="default">
     <% end %>
 
     <td><%= link_to beer.name, beer %></td>
