--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,16 +54,16 @@
                   <li class="dropdown-header">Triumviraat</li>
                   <li><%= link_to 'Groepen', groups_path %></li>
                   <li><%= link_to 'Ledenadministratie', leden_admin_path %></li>
-                  <li><%= link_to 'Externe Accounts', external_accounts_path %></li>
                   <li role="separator" class="divider"></li>
                 <% end %>
                 <% if current_user.dev? %>
                   <li class="dropdown-header">Developer</li>
                   <%= switch_user_select class: 'btn btn-dropdown-toggle' %>
                   <li><%= link_to 'OAuth-applicaties', oauth_applications_path %></li>
-                  <li><%= link_to 'API Docs', '/api_docs' %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
-                  <li><%= link_to 'Anonymize', anonymize_path, data: {confirm: 'Het is een tyfuswerk om dit ongedaan te maken dus weet je het zeker?'} %></li>
+                  <% if Rails.env.development? %>
+                    <li><%= link_to 'Anonymize', anonymize_path, data: {confirm: 'Het is een tyfuswerk om dit ongedaan te maken dus weet je het zeker?'} %></li>
+                  <% end %>>
                 <% end %>
                 <li class="dropdown-header">Openbare pagina's</li>
                 <li><%= link_to "Leden", public_leden_path %></li>
