--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -11,7 +11,7 @@
       <div class="pagination">
         <%= form_tag beers_path, class: "form-horizontal", method: :get do %>
           <div class="input-group" id="adv-search">
-              <%= text_field_tag :search, @sp, class: 'form-control', placeholder: 'Vind hier, je bier' %>
+            <%= text_field_tag :search, @sp, class: 'form-control', placeholder: 'Vind hier, je bier' %>
             <div class="input-group-btn">
               <div class="btn-group" role="group">
                 <%= submit_tag "Zoek", class: "btn btn-primary" %>
@@ -25,66 +25,65 @@
 </div>
 
 
-<table id="bier" class="table table-hover">
+<table id="bier" class="table table-hover table-responsive-sm">
   <thead>
-    <tr>
-      <col width="20%">
-      <col width="20%">
-      <col width="10%">
-      <col width="20%">
-      <col width="20%">
-      <col width="10%">
+  <tr>
+    <col width="20%">
+    <col width="20%">
+    <col width="10%">
+    <col width="20%">
+    <col width="20%">
+    <col width="10%">
 
-      <% ordering = params[:order] == "asc" ? "desc" : "asc" %>
-      
-      <% if params[:sort] == "name" %><% name_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
-      <% if params[:sort] == "soort" %><% soort_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
-      <% if params[:sort] == "grade" %><% grade_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
-      <% if params[:sort] == "brewer" %><% brewer_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
-      <% if params[:sort] == "country" %><% country_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
-      <% if params[:sort] == "review_count" %><% review_count_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+    <% ordering = params[:order] == "asc" ? "desc" : "asc" %>
 
-      <th><%= link_to "Naam" + name_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :name, order: ordering}) %></th>
-      <th><%= link_to "Soort" + soort_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :soort, order: ordering}) %></th>
-      <th><%= link_to "Cijfer" + grade_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :grade, order: ordering}) %></th>
-      <th><%= link_to "Brouwer" + brewer_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :brewer, order: ordering}) %></th>
-      <th><%= link_to "Land" + country_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :country, order: ordering}) %></th>
-      <th><%= link_to "Aantal reviews" + review_count_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :review_count, order: ordering}) %></th>
+    <% case params[:sort]
+       when "name" %>
+      <% name_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% when "soort" %>
+      <% soort_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% when "grade" %>
+      <% grade_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% when "brewer" %>
+      <% brewer_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% when "country" %>
+      <% country_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% when "review_count" %>
+      <% review_count_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
+    <% end %>
 
-      <% if current_user&.admin? %>
-        <th></th>
-      <% end %>
-    </tr>
+    <th><%= link_to "Naam" + name_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :name, order: ordering}) %></th>
+    <th><%= link_to "Soort" + soort_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :soort, order: ordering}) %></th>
+    <th><%= link_to "Cijfer" + grade_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :grade, order: ordering}) %></th>
+    <th><%= link_to "Brouwer" + brewer_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :brewer, order: ordering}) %></th>
+    <th><%= link_to "Land" + country_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :country, order: ordering}) %></th>
+    <th><%= link_to "Aantal reviews" + review_count_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :review_count, order: ordering}) %></th>
+  </tr>
   </thead>
   <tbody>
-    <% @beers.each do |beer| %>
-      <% if current_user %>
-        <% if beer.reviews.where('user_id = ?', current_user.id).empty? %>
-          <tr class="default">
-          <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 6 %>
-            <tr class="success">
-            <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 4 %>
-              <tr class="info">
-              <% else %>
-                <tr class="danger">
-                <% end %>
-              <% end %>
-              <td><%= link_to beer.name, beer %></td>
-              <td><%= beer.soort %></td>
-              <td><%= beer.cijfer? %></td>
-              <td><%= beer.brewer %></td>
-              <td><%= beer.country %></td>
-              <td><%= beer.reviews.count %></td>
-              <% if current_user&.active? %>
-                <td>
-                  <%= link_to 'Verwijder', beer, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
-                </td>
-              <% end %>
-                </tr>
-              <% end %>
+  <% @beers.each do |beer| %>
+    <% case current_user&.reviews&.find_by(beer: beer)&.rating
+       when 1..4 %>
+      <tr class="danger">
+    <% when 4..6 %>
+      <tr class="info">
+    <% when 6..10 %>
+      <tr class="success">
+    <% else %>
+      <tr class="default">
+    <% end %>
+
+    <td><%= link_to beer.name, beer %></td>
+    <td><%= beer.soort %></td>
+    <td><%= beer.cijfer? %></td>
+    <td><%= beer.brewer %></td>
+    <td><%= beer.country %></td>
+    <td><%= beer.reviews.count %></td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
 
 <% if current_user&.active? %>
-  <%= link_to 'Nieuw bier', new_beer_path, :class => 'btn btn-block btn-primary btn-sm' %>
+  <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
 <% end %>
