--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,16 +34,10 @@
                 <li role="separator" class="divider"></li>
                 <li><%= link_to new_user_invitation_path do %><i class="fa fa-user-plus fa-fw"></i> Lid uitnodigen<% end %></li>
                 <li role="separator" class="divider"></li>
+                <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to stats_path do %><i class="fas fa-chart-line fa-fw"></i> Statistieken<% end %></li>
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Brouwerij
-                <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
-                <li><%= link_to 'https://brewery.zondersikkel.nl/' do %><i class="fas fa-external-link-alt fa-fw"></i> Oude brouwerij<% end %></li>
               </ul>
             </li>
             <li class="dropdown">
