--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
     <li class="presentation"><a data-toggle="tab" href="#oud-leden">Oud-leden</a></li>
   <% end %>
   <% if @extern.present? %>
-    <li class="presentation"><a data-toggle="tab" href="#externe-accounts">Externe-accounts</a></li>
+    <li class="presentation"><a data-toggle="tab" href="#externe-accounts">Externe accounts</a></li>
   <% end %>
 </ul>
 
