--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,29 +1,37 @@
-<%= form_for(@meeting) do |f| %>
-    <% if @meeting.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
+<%= form_for @meeting, html: {id: 'meeting-form', class: 'form-horizontal'} do |f| %>
+  <% if @meeting.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
 
-          <ul>
-            <% @meeting.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
+      <ul>
+        <% @meeting.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-    <div class="form-group">
-      <%= f.label :agenda %><br>
+  <div class="form-group">
+    <%= f.label :agenda, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_area :agenda, class: 'form-control' %>
     </div>
-    <div class="form-group">
-      <%= f.label :onderwerp %><br>
+  </div>
+  <div class="form-group">
+    <%= f.label :onderwerp, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :onderwerp, class: 'form-control' %>
     </div>
-    <div class="form-group">
-      <%= f.label :datum %><br>
-      <%= f.date_select :date, {:order => [:day, :month, :year], :use_month_names => ['Januari', 'Februari', 'Maart', 'April', 'Mei', 'Juni', 'Juli', 'Augustus', 'September', 'Oktober', 'November', 'December']}, class: 'form-control date-select' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :datum, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.date_field :date, class: 'form-control' %>
     </div>
-    <div class="actions">
+  </div>
+  <div class="actions">
+    <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :Verstuur, class: 'btn btn-primary' %>
     </div>
+  </div>
 <% end %>
