--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,9 +1,4 @@
 <% content_for :title do %>
-    Vergadering bewerken
+    Wijzig vergadering
 <% end %>
 <%= render 'form' %>
-
-<div class="btn-group">
-    <%= link_to 'Show', @meeting, class: 'btn btn-default' %>
-    <%= link_to 'Back', meetings_path, class: 'btn btn-default' %>
-</div>
