--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -13,7 +13,7 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <% if @meeting.user_id %>
-          <p>Genotuleerd door: <b><%= link_to User.find(@meeting.user_id).name, User.find(@meeting.user_id) %></b></p>
+          <p>Genotuleerd door: <b><%= link_to @meeting.user.name, @meeting.user %></b></p>
           <hr>
         <% end %>
         <%= markdown(@meeting.agenda).html_safe if @meeting.agenda %>
