--- a/app/assets/stylesheets/beers.css.scss
+++ b/app/assets/stylesheets/beers.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the beers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#beer-info-panel img {
+  max-height: 400px;
+  margin-bottom: 12px;
+}
+
+#beer-info-panel tr {
+  td {
+    &:first-child {
+      text-align: left;
+    }
+
+    &:last-child {
+      text-align: right;
+    }
+  }
+}
