--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -135,11 +135,8 @@ aside {
 }
 
 /* forms */
-
-input, textarea, select, .uneditable-input {
+.uneditable-input {
   border: 1px solid #bbb;
-  width: 100%;
-  margin-bottom: 15px;
   @include box_sizing;
 }
 
