--- a/app/views/beers/reviews.html.erb
+++ b/app/views/beers/reviews.html.erb
@@ -1,20 +1,34 @@
 <% content_for :title do %>
-    Nieuwe review
+  Nieuwe review
 <% end %>
 
-<%= bootstrap_form_for(@beer.reviews.build(user_id: current_user.id, beer_id: @beer.id)) do |f| %>
-    <div class="form-group">
+<%= form_for @beer.reviews.build(user_id: current_user.id, beer_id: @beer.id), html: {class: 'form-horizontal'} do |f| %>
+  <%= f.hidden_field :beer_id %>
+
+  <div class="form-group">
+    <%= f.label "Je review", class: 'control-label col-sm-2' %>
+    <div class="col-sm-10">
       <%= f.text_area :description, placeholder: 'Wat vonden we ervan?', class: 'form-control' %>
     </div>
-    <div class="form-group">
-      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], class: 'form-control' %>
-      <div class="form-group">
-        <%= f.date_select :proefdatum %>
-      </div>
-      <%= f.hidden_field :beer_id %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :Cijfer, class: 'control-label col-sm-2' %>
+    <div class="col-sm-10">
+      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, {class: 'form-control'} %>
     </div>
-    <div class="actions">
-      <%= f.submit :Verstuur, class: 'btn btn-default' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :Proefdatum, class: 'control-label col-sm-2' %>
+    <div class="col-sm-10">
+      <%= f.date_field :proefdatum, class: 'form-control' %>
     </div>
-    <%= link_to 'Terug', @beer, :class => 'btn btn-default' %>
+  </div>
+
+  <div class="actions">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit "Verstuur", class: 'btn btn-primary' %>
+    </div>
+  </div>
 <% end %>
