--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,31 +1,7 @@
 <% content_for :title do %>
   Review aanpassen
 <% end %>
+
 <%= form_for @review, html: {class: 'form-horizontal'} do |f| %>
-  <div class="form-group">
-    <%= f.label "Je review", class: 'control-label col-sm-2' %>
-    <div class="col-sm-10">
-      <%= f.text_area :description, placeholder: 'Wat vonden we ervan?', class: 'form-control' %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :Cijfer, class: 'control-label col-sm-2' %>
-    <div class="col-sm-10">
-      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, {class: 'form-control'} %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :Proefdatum, class: 'control-label col-sm-2' %>
-    <div class="col-sm-10">
-      <%= f.date_field :proefdatum, class: 'form-control' %>
-    </div>
-  </div>
-
-  <div class="actions">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit "Verstuur", class: 'btn btn-primary' %>
-    </div>
-  </div>
+  <%= render partial: 'reviews/form', locals: {f: f} %>
 <% end %>
