--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,19 +1,7 @@
 <% content_for :title do %>
-    Review aanpassen
+  Review aanpassen
 <% end %>
-<%= form_for(@review) do |f| %>
-    <div class="form-group">
-      <%= f.text_area :description, class: 'form-control', placeholder: 'Wat vonden we ervan?' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :rating %>
-      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: 'form-control' %>
-      <%= f.label :proefdatum %><br>
-      <%= f.date_select :proefdatum, {}, class: 'form-control date-select' %>
-      <%= f.hidden_field :beer_id %>
-    </div>
-    <div class="actions">
-      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
-      <%= link_to 'Terug', @review.beer, class: 'btn btn-default' %>
-    </div>
+
+<%= form_for @review, html: {class: 'form-horizontal'} do |f| %>
+  <%= render partial: 'reviews/form', locals: {f: f} %>
 <% end %>
