--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
     </div>
     &nbsp;
     <div class="input-group">
-      <span class="input-group-addon"><i class="fas fa-envelope-o"></i></span>
+      <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
       <%= f.email_field :email, autofocus: false, class: "form-control", placeholder: "email" %>
     </div>
     &nbsp;
