--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
     <%= devise_error_messages! %>
 
     <div class="input-group">
-      <span class="input-group-addon"><i class="fas fa-envelope-o"></i></span>
+      <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
       <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
     </div>
     &nbsp;
