--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,9 +30,6 @@
                 <li role="separator" class="divider"></li>
                 <li><%= link_to blogitems_path do %><i class="fa fa-rss fa-fw"></i> Blog<% end %></li>
                 <li><%= link_to news_index_path do %><i class="far fa-newspaper fa-fw"></i> Nieuws<% end %></li>
-                <li><%= link_to public_pages_path do %><i class="fa fa-file-alt fa-fw"></i> Openbare pagina's<% end %></li>
-                <li role="separator" class="divider"></li>
-                <li><%= link_to new_user_invitation_path do %><i class="fa fa-user-plus fa-fw"></i> Lid uitnodigen<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
                 <li role="separator" class="divider"></li>
@@ -40,26 +37,40 @@
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
               </ul>
             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overig
-                <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <% if current_user&.admin? %>
-                  <li class="dropdown-header">Triumviraat</li>
-                  <li><%= link_to 'Groepen', groups_path %></li>
-                  <li><%= link_to 'Ledenadministratie', leden_admin_path %></li>
-                  <li role="separator" class="divider"></li>
-                <% end %>
-                <% if current_user.dev? %>
-                  <li class="dropdown-header">Developer</li>
-                  <%= switch_user_select class: 'btn btn-dropdown-toggle' %>
+            <% if current_user&.admin? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Triumviraat
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to leden_admin_path do %><i class="fa fa-users-cog fa-fw"></i> Ledenadministratie<% end %></li>
+                  <li><%= link_to groups_path do %><i class="fa fa-users fa-fw"></i> Groepen<% end %></li>
+                  <li><%= link_to new_user_invitation_path do %><i class="fa fa-user-plus fa-fw"></i> Aspirant uitnodigen<% end %></li>
+                </ul>
+              </li>
+            <% end %>
+            <% if current_user.dev? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>Andere gebruiker: <%= switch_user_select class: 'btn btn-dropdown-toggle' %></li>
                   <li><%= link_to 'OAuth-applicaties', oauth_applications_path %></li>
-                  <li><%= link_to 'Download DB', dbdump_path %></li>
+                  <li><%= link_to 'Download database dump', dbdump_path %></li>
                   <% if Rails.env.development? %>
                     <li><%= link_to 'Anonymize', anonymize_path, data: {confirm: 'Het is een tyfuswerk om dit ongedaan te maken dus weet je het zeker?'} %></li>
                   <% end %>
-                <% end %>
-                <li class="dropdown-header">Openbare pagina's</li>
+                </ul>
+              </li>
+            <% end %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Openbare pagina's
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Beheer', public_pages_path %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to "Leden", public_leden_path %></li>
                 <% PublicPage.where(public: true).each do |pp| %>
                   <li><%= link_to pp.title, "/#{pp.title}" %></li>
